--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
-
 python:
-  - 2.7
-
+  - "2.7"
+  - "3.3"
+  - "3.4"
+env:
+  - DJANGO=1.7
+  - DJANGO=1.8
+  - DJANGO=master
 install:
-  - pip install flake8
-  - pip install -e .
-
+  - pip install tox coveralls
 script:
-  - flake8 --max-line-length=100 --max-complexity=10 --statistics --benchmark eventlog
+  - tox -e py${TRAVIS_PYTHON_VERSION//[.]/}-$DJANGO
+after_success:
+  - coveralls
