--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: python
+sudo: false
 python:
   - "2.7"
+  - "3.2"
   - "3.3"
   - "3.4"
+  - "3.5"
 env:
   - DJANGO=1.7
   - DJANGO=1.8
-  - DJANGO=master
+  - DJANGO=1.9
+matrix:
+  exclude:
+    - python: "3.2"
+      env: DJANGO=1.9
+    - python: "3.3"
+      env: DJANGO=1.9
+    - python: "3.5"
+      env: DJANGO=1.7
 install:
   - pip install tox coveralls
 script:
