--- a/tox.ini
+++ b/tox.ini
@@ -2,77 +2,100 @@
 ignore = E265,E501
 max-line-length = 100
 max-complexity = 10
+exclude = pinax/eventlog/migrations/*
 
 [tox]
 envlist =
-    py27-1.7, py27-1.8, py27-master,
-    py33-1.7, py33-1.8, py33-master,
-    py34-1.7, py34-1.8, py34-master
+    py27-1.7, py27-1.8, py27-1.9,
+    py32-1.7, py32-1.8,
+    py33-1.7, py33-1.8,
+    py34-1.7, py34-1.8, py34-1.9,
+    py35-1.8, py35-1.9,
+
 
 [testenv]
 deps =
-    flake8 == 2.4.0
-    coverage == 3.7.1
+    flake8 == 2.5.0
+    coverage == 4.0.2
 usedevelop = True
 setenv =
    LANG=en_US.UTF-8
    LANGUAGE=en_US:en
    LC_ALL=en_US.UTF-8
 commands =
-  coverage run setup.py test
-  coverage report -m
   flake8 pinax
+  coverage run setup.py test
 
 [testenv:py27-1.7]
 basepython = python2.7
 deps =
-    {[testenv]deps}
-    Django<1.8
+  {[testenv]deps}
+  Django<1.8
 
 [testenv:py27-1.8]
 basepython = python2.7
 deps =
-    {[testenv]deps}
-    Django<1.8
+  {[testenv]deps}
+  Django<1.9
 
-[testenv:py27-master]
+[testenv:py27-1.9]
 basepython = python2.7
 deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
+  {[testenv]deps}
+  https://github.com/django/django/tarball/stable/1.9.x
+
+[testenv:py32-1.7]
+basepython = python3.2
+deps =
+  flake8 == 2.5.0
+  coverage == 3.7.1
+  Django<1.8
+
+[testenv:py32-1.8]
+basepython = python3.2
+deps =
+  flake8 == 2.5.0
+  coverage == 3.7.1
+  Django<1.9
 
 [testenv:py33-1.7]
 basepython = python3.3
 deps =
-    {[testenv]deps}
-    Django<1.8
+  {[testenv]deps}
+  Django<1.8
 
 [testenv:py33-1.8]
 basepython = python3.3
 deps =
-    {[testenv]deps}
-    Django<1.9
-
-[testenv:py33-master]
-basepython = python3.3
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
+  {[testenv]deps}
+  Django<1.9
 
 [testenv:py34-1.7]
 basepython = python3.4
 deps =
-    {[testenv]deps}
-    Django<1.8
+  {[testenv]deps}
+  Django<1.8
 
 [testenv:py34-1.8]
 basepython = python3.4
 deps =
-    {[testenv]deps}
-    Django<1.8
+  {[testenv]deps}
+  Django<1.9
 
-[testenv:py34-master]
+[testenv:py34-1.9]
 basepython = python3.4
 deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
+  {[testenv]deps}
+  https://github.com/django/django/tarball/stable/1.9.x
+
+[testenv:py35-1.8]
+basepython = python3.5
+deps =
+  {[testenv]deps}
+  Django<1.9
+
+[testenv:py35-1.9]
+basepython = python3.5
+deps =
+  {[testenv]deps}
+  https://github.com/django/django/tarball/stable/1.9.x
