--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,17 @@ env:
   - DJANGO=1.7
   - DJANGO=1.8
   - DJANGO=1.9
+  - DJANGO=master
 matrix:
   exclude:
     - python: "3.2"
       env: DJANGO=1.9
     - python: "3.3"
       env: DJANGO=1.9
+    - python: "3.2"
+      env: DJANGO=master
+    - python: "3.3"
+      env: DJANGO=master
     - python: "3.5"
       env: DJANGO=1.7
 install:
