New pinax-starter app requirements
Add AppConfig
New tox config (drop 1.7 support)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include AUTHORS
 include LICENSE
 include README.rst
+recursive-include pinax/eventlog/static *
+recursive-include pinax/eventlog/templates *
