--- a/tox.ini
+++ b/tox.ini
@@ -3,116 +3,55 @@ ignore = E265,E501
 max-line-length = 100
 max-complexity = 10
 exclude = pinax/eventlog/migrations/*,docs/*
+inline-quotes = double
+
+[isort]
+multi_line_output=3
+known_django=django
+known_third_party=mock,pinax
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+skip_glob=*/pinax/announcements/migrations/*
+include_trailing_comma=True
+
+[coverage:run]
+source = pinax
+omit = pinax/announcements/conf.py,pinax/announcements/tests/*,pinax/announcements/migrations/*
+branch = true
+data_file = .coverage
+
+[coverage:report]
+omit = pinax/announcements/conf.py,pinax/announcements/tests/*,pinax/announcements/migrations/*
+exclude_lines =
+    coverage: omit
+show_missing = True
 
 [tox]
 envlist =
-    py27-1.7, py27-1.8, py27-1.9, py27-master,
-    py32-1.7, py32-1.8,
-    py33-1.7, py33-1.8,
-    py34-1.7, py34-1.8, py34-1.9, py34-master,
-    py35-1.8, py35-1.9, py35-master
+    checkqa,
+    py27-dj{111}
+    py34-dj{111,20}
+    py35-dj{111,20}
+    py36-dj{111,20}
 
 [testenv]
+passenv = CI CIRCLECI CIRCLE_*
 deps =
-    flake8 == 2.5.0
-    coverage == 4.0.2
+    coverage
+    codecov
+    dj111: Django>=1.11,<1.12
+    dj20: Django<2.1
+    master: https://github.com/django/django/tarball/master
+
 usedevelop = True
-setenv =
-   LANG=en_US.UTF-8
-   LANGUAGE=en_US:en
-   LC_ALL=en_US.UTF-8
+commands =
+    coverage run setup.py test
+    coverage report -m --skip-covered
+
+[testenv:checkqa]
 commands =
     flake8 pinax
-    coverage run setup.py test
-
-[testenv:py27-1.7]
-basepython = python2.7
+    isort --recursive --check-only --diff pinax -sp tox.ini
 deps =
-    {[testenv]deps}
-    Django<1.8
-
-[testenv:py27-1.8]
-basepython = python2.7
-deps =
-    {[testenv]deps}
-    Django<1.9
-
-[testenv:py27-1.9]
-basepython = python2.7
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/stable/1.9.x
-
-[testenv:py27-master]
-basepython = python2.7
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
-
-[testenv:py32-1.7]
-basepython = python3.2
-deps =
-    flake8 == 2.5.0
-    coverage == 3.7.1
-    Django<1.8
-
-[testenv:py32-1.8]
-basepython = python3.2
-deps =
-    flake8 == 2.5.0
-    coverage == 3.7.1
-    Django<1.9
-
-[testenv:py33-1.7]
-basepython = python3.3
-deps =
-    {[testenv]deps}
-    Django<1.8
-
-[testenv:py33-1.8]
-basepython = python3.3
-deps =
-    {[testenv]deps}
-    Django<1.9
-
-[testenv:py34-1.7]
-basepython = python3.4
-deps =
-    {[testenv]deps}
-    Django<1.8
-
-[testenv:py34-1.8]
-basepython = python3.4
-deps =
-    {[testenv]deps}
-    Django<1.9
-
-[testenv:py34-1.9]
-basepython = python3.4
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/stable/1.9.x
-
-[testenv:py34-master]
-basepython = python3.4
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
-
-[testenv:py35-1.8]
-basepython = python3.5
-deps =
-    {[testenv]deps}
-    Django<1.9
-
-[testenv:py35-1.9]
-basepython = python3.5
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/stable/1.9.x
-
-[testenv:py35-master]
-basepython = python3.5
-deps =
-    {[testenv]deps}
-    https://github.com/django/django/tarball/master
+    flake8 == 3.4.1
+    flake8-quotes == 0.11.0
+    isort == 4.2.15
