--- a/tox.ini
+++ b/tox.ini
@@ -10,17 +10,17 @@ multi_line_output=3
 known_django=django
 known_third_party=mock,pinax
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-skip_glob=*/pinax/announcements/migrations/*
+skip_glob=*/pinax/eventlog/migrations/*
 include_trailing_comma=True
 
 [coverage:run]
 source = pinax
-omit = pinax/announcements/conf.py,pinax/announcements/tests/*,pinax/announcements/migrations/*
+omit = pinax/eventlog/conf.py,pinax/eventlog/tests/*,pinax/eventlog/migrations/*
 branch = true
 data_file = .coverage
 
 [coverage:report]
-omit = pinax/announcements/conf.py,pinax/announcements/tests/*,pinax/announcements/migrations/*
+omit = pinax/eventlog/conf.py,pinax/eventlog/tests/*,pinax/eventlog/migrations/*
 exclude_lines =
     coverage: omit
 show_missing = True
