--- a/tox.ini
+++ b/tox.ini
@@ -2,25 +2,25 @@
 ignore = E265,E501
 max-line-length = 100
 max-complexity = 10
-exclude = pinax/eventlog/migrations/*,docs/*
+exclude = **/*/migrations/*
 inline-quotes = double
 
 [isort]
 multi_line_output=3
 known_django=django
-known_third_party=mock,pinax
+known_third_party=jsonfield,pinax
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-skip_glob=*/pinax/eventlog/migrations/*
+skip_glob=**/*/migrations/*
 include_trailing_comma=True
 
 [coverage:run]
 source = pinax
-omit = pinax/eventlog/conf.py,pinax/eventlog/tests/*,pinax/eventlog/migrations/*
+omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*
 branch = true
 data_file = .coverage
 
 [coverage:report]
-omit = pinax/eventlog/conf.py,pinax/eventlog/tests/*,pinax/eventlog/migrations/*
+omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*
 exclude_lines =
     coverage: omit
 show_missing = True
