--- a/tox.ini
+++ b/tox.ini
@@ -28,15 +28,14 @@ show_missing = True
 [tox]
 envlist =
     checkqa,
-    py{36,37,38}-dj{22,30}
+    py{36,37,38}-dj{31}
 
 [testenv]
 passenv = CI CIRCLECI CIRCLE_*
 deps =
     coverage<5
     codecov
-    dj22: Django>=2.2,<3.0
-    dj30: Django>=3.0,<3.1
+    dj30: Django>=3.1
     master: https://github.com/django/django/tarball/master
 
 usedevelop = True
@@ -49,6 +48,6 @@ commands =
     flake8 pinax
     isort --recursive --check-only --diff pinax -sp tox.ini
 deps =
-    flake8 == 3.7.9
-    flake8-quotes == 2.1.1
-    isort == 4.3.21
+    flake8 == 3.8.3
+    flake8-quotes == 3.2.0
+    isort == 5.4.2
