--- a/tox.ini
+++ b/tox.ini
@@ -15,12 +15,12 @@ skip_glob=**/*/migrations/*
 
 [coverage:run]
 source = pinax
-omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*,**/*/admin.py
+omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*,**/*/admin.py,**/*/compat.py
 branch = true
 data_file = .coverage
 
 [coverage:report]
-omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*,**/*/admin.py
+omit = **/*/conf.py,**/*/tests/*,**/*/migrations/*,**/*/admin.py,**/*/compat.py
 exclude_lines =
     coverage: omit
 show_missing = True
@@ -28,15 +28,18 @@ show_missing = True
 [tox]
 envlist =
     checkqa,
-    py{36,37,38}-dj{31}
+    py{36,37,38}-dj{22-extras,30-extras,31}
 
 [testenv]
 passenv = CI CIRCLECI CIRCLE_*
 deps =
     coverage<5
     codecov
-    dj30: Django>=3.1
-    master: https://github.com/django/django/tarball/master
+    dj22-extras: Django>=2.2,<3.0
+    dj22-extras: django-jsonfield-backport>=1.0.0,<2
+    dj30-extras: Django>=3.0,<3.1
+    dj30-extras: django-jsonfield-backport>=1.0.0,<2
+    dj31: Django>=3.1,<3.2
 
 usedevelop = True
 commands =
